<resources>
    <string name="app_name">SmartTest</string>
    <string name="action_settings">Settings</string>
    <string name="ok">확인</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string-array name="roygbiv">
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
    </string-array>
    <string name="button">Send</string>
    <string name="red_slide">Red</string>
    <string name="blue_slide">Blue</string>
    <string name="green_slide">Green</string>
    <string name="measure">시작</string>
    <string name="stop">정지</string>
    <string name="textFolderName">ECG_SCALE_SIGNAL</string>
    <string name="textFileName">ECG_SCALE_SIGNAL</string>

    <!--join -->
    <string name="id">아이디</string>
    <string name="passwd">비밀번호</string>
    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="height">키</string>

    <!-- ble scan -->
    <string name="ble_device_name">UCLAB 스마트 체중계</string>
    <string name="not_device">토브넷 스마트 체중계가 아닙니다.</string>

    <!-- measure -->
    <string name="measure_heart">0bpm</string>
    <string name="measure_weight">0kg</string>
    <string name="measure_elapsetime">경과시간</string>
    <string name="measure_signal_good_quality">Good Signal</string>
    <string name="measure_signal_bad_quality">Bad Signal</string>


    <!-- result -->
    <string name="result_jsp_url">체중</string>

    <!-- record -->
    <string name="record_view">기간을 다시 설정하세요.</string>
</resources>

